<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="pt.isel.poo.colorlinkeditor.pt.isel.poo.colorlink.editor.EditorActivity">

    <LinearLayout
        android:id="@+id/menu"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:weightSum="1.0"
        android:layout_height="100dp">

        <RadioGroup
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.25"
            android:id="@+id/selectColor">
            <RadioButton
                android:text="@string/red"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/color0"
                android:id="@+id/red" />
            <RadioButton
                android:text="@string/green"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/color1"
                android:id="@+id/green" />
            <RadioButton
                android:text="@string/blue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/color2"
                android:id="@+id/blue" />
        </RadioGroup>

        <Space
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.01"/>

        <pt.isel.poo.colorlink.editor.PiecePicker
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="0.45"
            app:widthTiles="3"
            app:heightTiles="2"
            app:gridLine="2"
            android:id="@+id/select" />

        <Space
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.01"/>

        <RadioGroup
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:weightSum="1"
            android:layout_weight="0.3"
            android:id="@+id/selectAction">
            <RadioButton
                android:text="@string/insert"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.25"
                android:id="@+id/insert" />
            <RadioButton
                android:text="@string/rotate"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.25"
                android:id="@+id/rotate" />
            <RadioButton
                android:text="@string/move"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.25"
                android:id="@+id/move" />
            <RadioButton
                android:text="@string/fix"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.25"
                android:id="@+id/fix" />
        </RadioGroup>


    </LinearLayout>

    <pt.isel.poo.tile.TilePanel
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        app:widthTiles="6"
        app:heightTiles="6"
        app:gridLine="2"
        android:id="@+id/panel"
        />

</LinearLayout>
